web v1.5,no news from leifeng &copy

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         .page-content .solu-h2 + ol li {
             line-height: 1.618em;
         }
-        .page-content li ul {
+        .page-content ul {
             padding-left: 20px;
         }
         .page-content .solu-h3 {
@@ -488,18 +488,26 @@
                         <ul class="nav nav-tabs nav-stacked" role="tablist">
                             <li class="active" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
-                                   data-target="#app-stateTraffic"
-                                   aria-controls="app-stateTraffic"
+                                   data-target="#solu-stateElectronic"
+                                   aria-controls="solu-stateElectronic"
                                    aria-expanded="true">
-                                    交通部中国交通通信中心大数据云服务平台
+                                    国家电网某省大数据PaaS平台
                                 </a>
                             </li>
                             <li class="" role="presentation">
                                 <a href="javascript:;" data-toggle="tab"
-                                   data-target="#app-stateElectronic"
-                                   aria-controls="app-stateElectronic"
+                                   data-target="#app-stateTraffic"
+                                   aria-controls="app-stateTraffic"
                                    aria-expanded="true">
-                                    国家电网某省公司大数据PaaS平台
+                                    中国交通行业大数据平台
+                                </a>
+                            </li>
+                            <li class="" role="presentation">
+                                <a href="javascript:;" data-toggle="tab"
+                                   data-target="#app-stateCDMA"
+                                   aria-controls="app-stateCDMA"
+                                   aria-expanded="true">
+                                    中国电信某省分公司CDMA用户日志分析系统
                                 </a>
                             </li>
                             <li class="" role="presentation">
@@ -507,33 +515,142 @@
                                    data-target="#app-medicine"
                                    aria-controls="app-medicine"
                                    aria-expanded="true">
-                                    移动医疗应用（亲子医生）
+                                    亲子医生移动互联网应用平台
                                 </a>
                             </li>
                         </ul>
                     </div>
                     <div class="col-xs-10 col-md-9 tab-content" role="main">
-                        <div class="tab-pane fade active in" id="app-stateTraffic">
-                            <h2 class="solu-h2">简介</h2>
+                        <div class="tab-pane fade active in" id="app-stateElectronic">
+                            <h2 class="solu-h2">项目介绍</h2>
+                            <ul>
+                                <li>
+                                   <p>
+                                       为国网某省公司下属的部门、单位，提供大数据存储与计算，运营管理与数据服务，同时优化大数据相关人才的组织结构管理，改善了企业数据资产集约化管理的能力，提升企业大数据创新服务能力，加快了信息化企业建设步伐。
+                                   </p>
+                                </li>
+                                <li>
+                                    <p>利用iMaya系统为国电内部企业与部门提供大数据运维，安全，开发等可视化服务。国电内部至少8 家企业单位，构建配网运行数据分析，用户电量分析，IT 系统与网络安全风险评估分析等应用。</p>
+                                </li>
+                            </ul>
+                            <h2 class="solu-h2">特点:</h2>
+                            <ul>
+                                <li> <p>一个大数据平台，一套运维人员，多个企业内部用户，简单易用的开发环境和运维环境。</p></li>
+                                <li>
+                                    <p>
+                                        <label class="hide"></label>
+                                        <img src="assets/img/app/paas-elect-imaya.png" alt="">
+                                    </p>
+                                </li>
+                            </ul>
+                            <h2 class="solu-h2">好处:</h2>
+                            <ul>
+                                <li><p class="">减少重复建设，汇聚大数据人才资源，集约化管理，降本增效。</p></li>
+                                <li>
+                                    <p>
+                                        <label class="hide"></label>
+                                        <img src="assets/img/app/paas-elect-stat.jpg" alt="">
+                                    </p>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="tab-pane fade" id="app-stateTraffic">
+                            <h2 class="solu-h2">项目介绍</h2>
                             <ol>
                                 <li>
-                                    对全国的“两客一危”车辆实现动态化监管，同时为社会提供所需数据服务。
+                                    交通拥有了各类动态数据，如车辆实时营运信息、道路交通状况等等。对交通三要素（人流、车辆、道路）连续采集的多源交通数据流产生了巨量的交通数据，具有体量大、多样性、实时的特点。
+                                </li>
+                                <li>每天达到约180GB的数据量，对城市道路交通的整体运营水平和人们出行规律的深度挖掘，要实现以日、月，年，地区，类型等多视角数据的计算与分析。 </li>
+                                <li>
+                                    <p><label class="hide"></label><img src="assets/img/app/traffic-platform-stat.jpg" alt=""></p>
+                                </li>
+                            </ol>
+                            <h2 class="solu-h2">效果样例</h2>
+                            <ol>
+                                <li>
+                                    <h3 class="solu-h3">重点车辆上线分析：</h3>
+                                    <ul>
+                                        <li>
+                                            <p>实现对危险品运输车辆的有效监管，由原来的事后处置变为主动预警干预，保障了危险品运输的安全可靠，可监管。</p>
+                                        </li>
+                                        <li>
+                                            <p><label class="hide"></label><img src="assets/img/app/traffic-stat-01.png" alt=""></p>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <h3>
+                                        车辆轨迹和停靠分析：
+                                    </h3>
+                                    <ul>
+                                        <li>
+                                           <p class=""> 实现客运班线及包车在人、车、户、线的动态式监管，从而为合理规划线路，合理资源配置，提供帮助。利用大数据相关技术与分析手段，将推动交通行业的管理运营模式的转变,实现智慧交通。</p>
+                                        </li>
+                                        <li>
+                                            <p><label class="hide"></label><img src="assets/img/app/traffic-stat-02.jpg" alt=""></p>
+                                        </li>
+                                    </ul>
                                 </li>
                             </ol>
                         </div>
-                        <div class="tab-pane fade" id="app-stateElectronic">
-                            <h2 class="solu-h2">简介</h2>
+                        <div class="tab-pane fade" id="app-stateCDMA">
+                            <h2 class="solu-h2">项目介绍</h2>
+                            <ul>
+                                <li><p>
+                                    &nbsp;&nbsp;&nbsp;&nbsp;本项目通过对C网用户业务话单（非HTTP方式上网的话单）和网络话单（HTTP方式上网的话单）的加载及业务逻辑汇总，实现对C网用户的上网行为分析。
+                                </p>
+                                </li>
+                            </ul>
+                            <h2 class="solu-h2">数据处理特点</h2>
                             <ol>
                                 <li>
-                                    为国网某省公司内的部门，单位提供统一的大数据管理计算与数据服务平台，减少重复投资，同时优化大数据相关人才的组织结构管理，改善了企业数据资产集约化管理的能力，提升了企业大数据创新服务能力，加快了信息化企业建设步伐。
+                                    全省CDMA用户，每天增量处理450GB－720GB数据。
                                 </li>
+                                <li>实现数据装载（15分钟），清洗转换，存储计算。</li>
+                                <li>实现数据分布式并行处理和分析。</li>
+                            </ol>
+                            <p>
+                                <label class="hide"></label>
+                                <img src="assets/img/app/cdma-log.jpg" alt="">
+                            </p>
+                            <h2 class="solu-h2">效果</h2>
+                            <ol>
+                                <li>数据实时转载，实时分析展现。</li>
+                                <li>处理量：平均每天460GB。覆盖全省C网用户。</li>
+                                <li>实现每用户上网日志，行为喜好分析。</li>
+                                <li>提升对网络流量管控的能力，优化网络配置。</li>
+                                <li>助力精确营销，优化业务套餐配置。</li>
+                                <li>优化终端补贴效果，节约每用户发展成本。</li>
                             </ol>
                         </div>
                         <div class="tab-pane fade" id="app-medicine">
-                            <h2 class="solu-h2">简介</h2>
+                            <h2 class="solu-h2">项目介绍</h2>
+                            <ul>
+                                <li><p>&nbsp;&nbsp;&nbsp;&nbsp;
+                                    亲子医生，作为面向孕妇，儿童及青少年的移动医疗服务平台，是传统医疗模式向移动互联网模式的延伸。旨在建立可信任的医患关系，建立全新的医患社会信任，推动移动互联网医疗的发展。亲子医生，作为从“陌生问诊机制”向“熟人医患关系”转型的全新移动医疗服务产品，有着传统医疗不可替代的优势，它是传统医疗的有力补充。
+                                </p>
+                                </li>
+                            </ul>
+                            <p><label class="hide"></label><img src="assets/img/app/doctor-app.png" alt=""></p>
+                            <h2 class="solu-h2">重点模块展示</h2>
                             <ol>
                                 <li>
-                                     亲子医生。
+                                    <h3 class="solu-h3">患者随访计划</h3>
+                                    <ul>
+                                        <li><strong>随访历史：</strong>患者（或者家人）所有的随访任务记录，可以查看每次随访任务的计划清单。 </li>
+                                        <li><strong>随访评价：</strong>每次随访任务结束后，患者可以给提供该服务的医生进行服务评价。</li>
+                                        <li><strong>随访任务计划：</strong>单次随访任务的详情，包括随访任务名称、随访指标、随访时间等信息。</li>
+                                        <li><strong>随访计划事项提醒：</strong>对于随访任务内的单个计划时间，提前提醒患者，需要做的任务以及时间等。</li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <h3 class="solu-h3">患者管理模块</h3>
+                                    <ul>
+                                        <li>
+                                            <p>用户管理即医生对患者的管理。用户管理包括几大特色功能：会诊医生添加、患者转诊、会诊医生收益分配、患者随访计划增删改查、会诊群、用户信息查询等。</p>
+                                        </li>
+                                    </ul>
+                                    <p><label class="hide"></label><img src="assets/img/app/doctor-client-visit.png" alt=""></p>
                                 </li>
                             </ol>
                         </div>
@@ -624,17 +741,6 @@
                         </ul>
                     </div>
                     <div class="col-xs-10 col-md-9" role="main">
-                        <!-- <div class="tab-pane fade active in" role="tabpanel" id="about-outline">
-                            <ul class="" style="padding-left:0;">
-                                <li class="">&nbsp;&nbsp;“北京融智辉腾科技有限公司”成立于2014年4月，是一家专注于数据智能化解决方案的高科技创新企业。</li>
-                                <li class="">总部设在北京，在上海设有办事处。还设有武汉研发与交付中心。</li>
-                                <li class="">公司核心技术与管理团队来自世界著名的IT与互联网公司，如：ORACLE，IBM，美国Google、Accenture、百度，阿里巴巴等， 85%的团队为技术工程师。</li>
-                                <li>&nbsp;</li>
-                                <li class="">&nbsp;&nbsp;&nbsp;&nbsp;北京融智辉腾科技有限公司主要从事基于大数据的智能化产品与应用研发，同时致力于基于大数据服务云的研发与运营服务。</li>
-                                <li class="">为客户提供基于数据智能化的解决方案，在交通，电信，能源，移动互联网等行业有非常好的实践与成功案例。</li>
-                                <li class="">公司专业化的服务团队提供从应用探索、系统规划、概念验证、部署优化到应用开发等的一系列专业服务。</li>
-                            </ul>
-                        </div> -->
                         <div class="tab-pane fade active in" role="tabpanel" id="about-outline">
                             <p>
                                 &nbsp;&nbsp;“北京融智辉腾科技有限公司”成立于2014年4月，是一家专注于数据智能化解决方案的高科技创新企业。总部位于北京，设有上海办事处，北京产品设计与解决方案中心，并依托武汉东湖新技术开发区在政策、人才等方面的优势，设立了武汉研发与交付中心。
@@ -667,7 +773,7 @@
                         <!--/@FIXME: 图标展示-->
                         <div class="tab-pane fade" id="about-link">                            
                             <!--百度地图容器-->
-                            <div style="height:350px;border:#ccc solid 1px;" class="hide" id="dituContent"></div>
+                            <div style="height:350px;border:#ccc solid 1px;" class="" id="dituContent"></div>
                             <p class="">地址：北京市东城区东长安街1号东方广场东2 办公楼19 层</p>
                             <p class="hide">电话：010-85200310</p>
                             <p class="hide">联系人：</p>
@@ -924,7 +1030,7 @@ $(function () {
 
     routie('index');
     // tab
-    //initMap();//创建和初始化地图
+    initMap();//创建和初始化地图
 });
 </script>
 </body>
