--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li class="nav nav-service">
                 <a href="#service">服务</a>
             </li>
-            <li class="nav nav-solu">
+            <li class="nav nav-solu hide">
                 <a href="#solu">解决方案</a>
             </li>
             <li class="nav nav-app">
@@ -420,14 +420,6 @@
                                     电信行业
                                 </a>
                             </li>
-                            <!-- <li class="hide" role="presentation">
-                                <a href="javascript:;" data-toggle="tab"
-                                   data-target="#solu-medicine"
-                                   aria-controls="solu-medicine"
-                                   aria-expanded="false">
-                                    医疗行业
-                                </a>
-                            </li> -->
                         </ul>
                     </div>
                     <div class="col-xs-10 col-md-9 tab-content" role="main">
@@ -473,7 +465,12 @@
                         </div>
                         <!--/ 电信行业 -->
                         <div class="tab-pane fade" id="solu-medicine">
-
+                            <h2 class="solu-h2">简介</h2>
+                            <ol>
+                                <li>
+                                    利用Colorful Viewer 实现用户上网快速分析与报告。
+                                </li>
+                            </ol>
                         </div>
                         <!--/ 医疗行业 -->
                     </div>
