--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <li class="nav nav-service">
                 <a href="#service">服务</a>
             </li>
-            <li class="nav nav-solu hide">
+            <li class="nav nav-solu">
                 <a href="#solu">解决方案</a>
             </li>
             <li class="nav nav-app">
