--- a/index.html
+++ b/index.html
@@ -468,7 +468,9 @@
                             <h2 class="solu-h2">简介</h2>
                             <ol>
                                 <li>
-                                    利用Colorful Viewer 实现用户上网快速分析与报告。
+                                    <p>
+                                        亲子医生，作为面向孕妇，儿童及青少年的移动医疗服务平台，是传统医疗模式向移动互联网模式的延伸。旨在建立可信任的医患关系，建立全新的医患社会信任，推动移动互联网医疗的发展。亲子医生，作为从“陌生问诊机制”向“熟人医患关系”转型的全新移动医疗服务产品，有着传统医疗不可替代的优势，它是传统医疗的有力补充。
+                                    </p>
                                 </li>
                             </ol>
                         </div>
